# CRMLite

./: .gitignore  pyproject.toml
app/authenticate/: admin.py  models.py  serializers.py  urls.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_user_username.py  0003_user_company_id_user_is_company_owner_and_more.py
app/core/: settings.py  urls.py
app/crm_lite/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/crm_lite/migrations/: 0001_initial.py  0002_alter_storage_company_id.py  0003_alter_company_inn_alter_storage_address_product_and_more.py  0004_alter_product_purchase_price_and_more.py
